--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     --bg-color: #050b14;
     font-family: 'Courier New', Courier, monospace; 
   }
+  /* Disable all text shadows globally */
+{ text-shadow: none !important; }
   html,body{height:100%;margin:0;background:var(--bg-color);overflow:hidden;user-select:none;-webkit-user-select:none;color:#e6fbff;}
   
   #gameWrap{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;background:#000;}
