--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     font-family: 'Courier New', Courier, monospace; 
   }
   /* Disable all text shadows globally */
+  
 { text-shadow: none !important; }
   html,body{height:100%;margin:0;background:var(--bg-color);overflow:hidden;user-select:none;-webkit-user-select:none;color:#e6fbff;}
   
@@ -171,7 +172,7 @@
     background: var(--neon1);
   }
   .btn:hover .btn-text {
-      text-shadow: 0 0 5px #000, 0 0 10px #fff;
+      text-shadow: none;
   }
 
   /* Reset/Danger Button Variations */
