--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   }
   /* Disable all text shadows globally */
   
-{ text-shadow: none !important; }
+* { text-shadow: none !important; }
   html,body{height:100%;margin:0;background:var(--bg-color);overflow:hidden;user-select:none;-webkit-user-select:none;color:#e6fbff;}
   
   #gameWrap{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;background:#000;}
